# MOCCA

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  license.txt
.github/workflows/: build-debian.yml  build-mac.yml  build-win.yml  build-win2.yml
deb/mocca/debian/: changelog  control  copyright  mocca.sgml  rules
debian/: changelog  control  copyright  mocca.manpages  mocca.sgml  rules
debian/patches/: fixedprediction  improvedusability  series
debian/source/: options
src/: Makefile.am  aux.cpp  aux.hpp  common.hpp  config.cpp  config.hpp  main.cpp  motifs.cpp  motifs.hpp  sequencelist.cpp  sequencelist.hpp  sequences.cpp  sequences.hpp  validation.cpp  validation.hpp  vaux.cpp  vaux.hpp
src/.github/workflows/: build.yml
src/lib/ranger/src/: utility.h
src/models/: baseclassifier.cpp  baseclassifier.hpp  cpredictor.cpp  cpredictor.hpp  dummypredictor.cpp  dummypredictor.hpp  features.cpp  features.hpp  rfmocca.cpp  rfmocca.hpp  seqdummy.cpp  seqdummy.hpp  seqlda.cpp  seqlda.hpp  seqlo.cpp  seqlo.hpp  seqperceptron.cpp  seqperceptron.hpp  seqrf.cpp  seqrf.hpp  seqsvm.cpp  seqsvm.hpp  sequenceclassifier.cpp  sequenceclassifier.hpp  svmmocca.cpp  svmmocca.hpp
tutorial/: KahnPcG.fa  README.md  UmassPGFE_PSSM_pho_SOLEXA_5_20200302.pssm  motifs2019.xml  motifs2019expho.xml  tCDS.fa  tPREsKahn2014.fa  vPREsKahn2014.fa
wasm/: Makefile  index.html
wasm/assets/: mocca.eps  theme.css
