AUTOMAKE_OPTIONS = foreign subdir-objects
bin_PROGRAMS = mocca
mocca_SOURCES = main.cpp aux.cpp config.cpp motifs.cpp sequencelist.cpp sequences.cpp validation.cpp models/baseclassifier.cpp models/cpredictor.cpp models/dummypredictor.cpp models/features.cpp models/seqdummy.cpp models/seqlo.cpp models/seqsvm.cpp models/sequenceclassifier.cpp models/svmmocca.cpp lib/libsvm-3.17/svm.cpp

