AUTOMAKE_OPTIONS = foreign subdir-objects
bin_PROGRAMS = mocca
mocca_SOURCES = main.cpp aux.cpp config.cpp motifs.cpp sequencelist.cpp sequences.cpp validation.cpp models/baseclassifier.cpp models/cpredictor.cpp models/dummypredictor.cpp models/features.cpp models/seqdummy.cpp models/seqlo.cpp models/seqsvm.cpp models/seqrf.cpp models/sequenceclassifier.cpp models/svmmocca.cpp lib/libsvm-3.17/svm.cpp lib/ranger/src/Forest.cpp lib/ranger/src/ForestClassification.cpp lib/ranger/src/ForestProbability.cpp lib/ranger/src/ForestRegression.cpp lib/ranger/src/Tree.cpp lib/ranger/src/TreeClassification.cpp lib/ranger/src/TreeProbability.cpp lib/ranger/src/TreeRegression.cpp lib/ranger/src/Data.cpp lib/ranger/src/utility.cpp

#lib/ranger/src/Forest.cpp lib/ranger/src/ForestClassification.cpp lib/ranger/src/ForestProbability.cpp lib/ranger/src/ForestRegression.cpp lib/ranger/src/Tree.cpp lib/ranger/src/TreeClassification.cpp lib/ranger/src/TreeProbability.cpp lib/ranger/src/TreeRegression.cpp lib/ranger/src/Data.cpp
# mocca_SOURCES = main.cpp aux.cpp config.cpp motifs.cpp sequencelist.cpp sequences.cpp validation.cpp models/baseclassifier.cpp models/cpredictor.cpp models/dummypredictor.cpp models/features.cpp models/seqdummy.cpp models/seqlo.cpp models/seqsvm.cpp models/sequenceclassifier.cpp models/svmmocca.cpp lib/libsvm-3.17/svm.cpp
# lib/ranger/cpp_version/src/Forest/Forest.cpp lib/ranger/cpp_version/src/Forest/ForestClassification.cpp lib/ranger/cpp_version/src/Forest/ForestProbability.cpp lib/ranger/cpp_version/src/Forest/ForestRegression.cpp lib/ranger/cpp_version/src/Tree/Tree.cpp lib/ranger/cpp_version/src/Tree/TreeClassification.cpp lib/ranger/cpp_version/src/Tree/TreeProbability.cpp lib/ranger/cpp_version/src/Tree/TreeRegression.cpp lib/ranger/cpp_version/src/utility/Data.cpp
 
# lib/ranger/cpp_version/src/utility/utility.cpp

